--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pma-springbootdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/pma
 spring.datasource.username=***********
 spring.datasource.password=***********
 
