Added local jdbc/user/pass variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pma
-spring.datasource.username=***********
-spring.datasource.password=***********
+#jdbc:postgresql://localhost:5432/pma
+spring.datasource.url=${jdbcurl}
+spring.datasource.username=${dbuser}
+spring.datasource.password=${dbpass}
 
 spring.datasource.initialization-mode=never
 spring.jpa.hibernate.ddl-auto=none
