--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,1 @@
-#jdbc:postgresql://localhost:5432/pma
-spring.datasource.url=${jdbcurl}
-spring.datasource.username=${dbuser}
-spring.datasource.password=${dbpass}
-
-spring.datasource.initialization-mode=never
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.show-sql=true
-spring.thymeleaf.cache=false
+spring.profiles.active=dev
