--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,4 +7,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+
+logging.level.root= WARN
+logging.level.org.springframework = INFO
 logging.level.com.agharibi.projectmanagement=DEBUG
