--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,5 @@ spring.thymeleaf.cache=false
 logging.level.root= WARN
 logging.level.org.springframework = INFO
 logging.level.com.agharibi.projectmanagement=DEBUG
+
+server.error.whitelabel.enabled=false
